<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Arkivio</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="button_yes">Sì</string>
    <string name="button_open">Apri</string>
    <string name="button_send">Invia</string>
    <string name="button_close">Chiudi</string>
    <string name="button_login">Accedi</string>
    <string name="button_cancel">Annulla</string>
    <string name="button_confirm">Conferma</string>
    <string name="button_discover">Discover</string>
    <string name="button_register">Registra</string>
    <string name="button_try_again">Riprova</string>
    <string name="button_advertise">Advertise</string>
    <string name="username">Username</string>
    <string name="input_type_text">text</string>
    <string name="dominio_gmail">\@gmail.com</string>
    <string name="login_remember_me">Ricordami</string>
    <string name="clear_cache">Cancella la Cache</string>
    <string name="login_your_mail">LA TUA MAIL</string>
    <string name="login_your_password">PASSWORD</string>
    <string name="input_type_password">password</string>
    <string name="login_hint_username"><font size="14">nome.cognome</font></string>
    <string name="login_hint_password"><font size="14">Password del dominio</font></string>
    <string name="login_lost_password">Hai dimenticato la password?\nEffettua il reset</string>
    <string name="api_version">Your device is running Android API version <xliff:g id="current_version">%1$s</xliff:g>.</string>
    <string name="feedback">Feedback</string>
    <string name="label_logout">Logout</string>
    <string name="settings">Impostazioni</string>
    <string name="app_version">Versione app:</string>
    <string name="label_dark_mode">Dark mode</string>
    <string name="label_light_mode">Light mode</string>
    <string name="switch_mode_message">Per apportare le modifiche è necessario riavviare l\'app.</string>
    <string name="settings_message">Vuoi comprimere il background all\'apertura del menu laterale?</string>
    <string name="name_title">Giovanni</string>
    <string name="good_evening_title">Buonasera</string>
    <string name="good_moorning_title">Buongiorno</string>
    <string name="name_surname_title">Giovanni Petito</string>
    <string name="working_area_title">WORKING AREA</string>
    <string name="link_area_title">LINK AREA</string>
    <string name="static_links_title">Link Statici</string>
    <string name="dynamic_links_title">Link Dinamici</string>
    <string name="webview_drive_w3b_title">Drive W3B</string>
    <string name="link_drive_waw3_title">Drive WAW3</string>
    <string name="browser_github_title">Browser GitHub</string>
    <string name="webview_github_title">WebView GitHub</string>
    <string name="link_app_title">Link App</string>
    <string name="link_test_title">Link Test</string>
    <string name="web_url">http://android-er.blogspot.com/</string>
    <string name="webview_video_player_title">WebView Video Player</string>
    <string name="webview_text_title">WebView Text</string>
    <string name="webview_html_title">WebView HTML</string>
    <string name="edit_search">Cerca…</string>
    <string name="logcat_projects_title">Logcat projects</string>
    <string name="current_week">QUESTA SETTIMANA</string>
    <string name="next_week">PROSSIMA SETTIMANA</string>
    <string name="future_events">EVENTI FUTURI</string>
    <string name="current_year">anno in corso</string>
    <string name="date_title">Date</string>
    <string name="date_format_title">Date Format</string>
    <string name="date_picker_title">Date Picker</string>
    <string name="calendarview_horizontal_title">CalendarView Horizontal</string>
    <string name="calendarview_vertical_title">CalendarView Vertical</string>
    <string name="monday">LUN</string>
    <string name="tuesday">MAR</string>
    <string name="wednesday">MER</string>
    <string name="thursday">GIO</string>
    <string name="friday">VEN</string>
    <string name="saturday">SAB</string>
    <string name="sunday">DOM</string>
    <string name="Date.hours">Date().hours</string>
    <string name="Date.minutes">Date().minutes</string>
    <string name="getDate">getDate</string>
    <string name="getDate_millis">getDate (millis)</string>
    <string name="millis_1">millis 1</string>
    <string name="millis_2">millis 2</string>
    <string name="millis_3">millis 3</string>
    <string name="millis_4">millis 4</string>
    <string name="getFormatTime">getFormatTime</string>
    <string name="getFormatTimePlus1">getFormatTime + 1</string>
    <string name="getFormatDate1" tools:ignore="Typos">getFormatDate1</string>
    <string name="getFormatDate2">getFormatDate2</string>
    <string name="getFormatDate3">getFormatDate3</string>
    <string name="getFormatDate4">getFormatDate4</string>
    <string name="getFormatDate4Plus1">getFormatDate4 + 1</string>
    <string name="getCustomFormatDate">getCustomFormatDate</string>
    <string name="getFormatTime_start">getFormatTime (start)</string>
    <string name="getFormatTime_end">getFormatTime (end)</string>
    <string name="getFormatDate4_start">getFormatDate4 (start)</string>
    <string name="getFormatDate4_end">getFormatDate4 (end)</string>
    <string name="getRangeTime_current">getRangeTime (current)</string>
    <string name="getRangeTime_response">getRangeTime (response)</string>
    <string name="getRangeDate1_current" tools:ignore="Typos">getRangeDate1 (current)</string>
    <string name="getRangeDate1_response" tools:ignore="Typos">getRangeDate1 (response)</string>
    <string name="getRangeDate2_current">getRangeDate2 (current)</string>
    <string name="getSimpleDate1" tools:ignore="Typos">getSimpleDate1</string>
    <string name="getSimpleDate2">getSimpleDate2</string>
    <string name="getSimpleDate3">getSimpleDate3</string>
    <string name="getSimpleDate4">getSimpleDate4</string>
    <string name="getSimpleTime">getSimpleTime</string>
    <string name="getSimpleName">getSimpleName</string>
    <string name="getSimpleDay">getSimpleDay</string>
    <string name="getSimpleMonth">getSimpleMonth</string>
    <string name="getSimpleYear">getSimpleYear</string>
    <string name="getUpperSimpleName1" tools:ignore="Typos">getUpperSimpleName1</string>
    <string name="getUpperSimpleName2">getUpperSimpleName2</string>
    <string name="getUpperSimpleDate1" tools:ignore="Typos">getUpperSimpleDate1</string>
    <string name="getUpperSimpleDate2">getUpperSimpleDate2</string>
    <string name="getCustomFormatTime">getCustomFormatTime</string>
    <string name="getTimeRange1" tools:ignore="Typos">getTimeRange1</string>
    <string name="getTimeRange2">getTimeRange2</string>
    <string name="getTimeRange3">getTimeRange3</string>
    <string name="getTimeRange4">getTimeRange4</string>
    <string name="getGranularityDate">getGranularityDate</string>
    <string name="setTimeDate">setTimeDate</string>
    <string name="tap_here">Tap here</string>
    <string name="DatePickerDialog_minDate">DatePickerDialog (minDate)</string>
    <string name="DatePickerDialog_maxDate">DatePickerDialog (maxDate)</string>
    <string name="Current_TimePickerDialog">Current TimePickerDialog</string>
    <string name="Start_TimePickerDialog">Start TimePickerDialog</string>
    <string name="Range_TimePickerDialog">Range TimePickerDialog</string>
    <string name="DatePicker">DatePicker</string>
    <string name="Single_TimePicker">Single TimePicker</string>
    <string name="Range_TimePicker_1">Range TimePicker 1</string>
    <string name="Range_TimePicker_2">Range TimePicker 2</string>
    <string name="smartworking_title">Smartworking</string>
    <string name="switch_selected_days">Reset selected days</string>
    <string name="smartworking_message_success">La comunicazione di Smartworking è stata inviata correttamente.</string>
    <string name="smartworking_message_failure">Si è verificato un errore nella comunicazione di Smartworking. Riprova più tardi.</string>
    <string name="smartworking_message_modify">Sei sicuro di voler modificare le giornate di Smartworking?</string>
    <string name="smartworking_message_abort">Vuoi annullare la modifica dei giorni di Smartworking? Le modifiche non saranno salvate.</string>
    <string name="smartworking_subject_mail">Lavoro in regime agile %1$s</string>
    <string name="smartworking_content_mail">Buon giorno,\nvi informo che in accordo con il mio responsabile %1$s, %2$s lavorerò in regime agile.\n\nGrazie\n%3$s</string>
    <string name="smartworking_revision_subject_mail">Lavoro in regime agile - Rettifica %1$s</string>
    <string name="smartworking_revision_1_content_mail">Buon giorno,\nvi informo che, a differenza di quanto precedentemente comunicato, %1$s lavorerò presso la sede.\n\nGrazie\n%2$s</string>
    <string name="smartworking_revision_2_content_mail">Buon giorno,\nvi informo che, a differenza di quanto precedentemente comunicato, %1$s lavorerò presso la sede.\n\nIn accordo con il mio responsabile %2$s, lavorerò in regime agile %3$s.\n\nGrazie\n%4$s</string>
    <string name="email_title">Email</string>
    <string name="simple_mail_title">Send Simple Mail</string>
    <string name="filled_out_mail_title">Send Filled Out Mail</string>
    <string name="gmail_mail_title">Send Gmail Mail</string>
    <string name="outlook_mail_title">Send Outlook Mail</string>
    <string name="rubrica_title">Rubrica (Realtime Client)</string>
    <string name="rubrica_home_title">Home Rubrica</string>
    <string name="rubrica_list_title">Lista Rubrica</string>
    <string name="rubrica_detail_title">Dettaglio Rubrica</string>
    <string name="add_users">Aggiungi utenti</string>
    <string name="get_init_users">Get users from init() method</string>
    <string name="get_json_users">Get users from json file</string>
    <string name="get_realtime_users">Get users from Realtime database</string>
    <string name="rubrica_message_dialog">Vuoi aggiungere il contatto in rubrica?</string>
    <string name="rubrica_list_action_label">Fatto</string>
    <string name="activate_the_search">Attiva la ricerca</string>
    <string name="search_by_name_or_msisdn">Cerca per nome o msisdn</string>
    <string name="phone_state_title">Stato del telefono</string>
    <string name="explores_pdf_title">Esplora PDF</string>
    <string name="download_pdf_title">Scarica PDF</string>
    <string name="youtube_title">YouTube</string>
    <string name="search_title">Search\nYouTubePlayerView\nYouTubePlayerFragment</string>
    <string name="player_title">Titolo: </string>
    <string name="player_video_id">Video ID: </string>
    <string name="player_description">Descrizione: </string>
    <string name="full_screen_view">Full screen view</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>
    <string name="video_wall">Video Wall</string>
    <string name="video_list">Video List</string>
    <string name="fullscreen_handling">Fullscreen Handling</string>
    <string name="actionbar_overlay">ActionBar Overlay</string>
    <string name="player_controls">Player Controls</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip to</string>
    <string name="seconds">seconds</string>
    <string name="intent_controls">Intent Controls</string>
    <string name="play_video">Play Video</string>
    <string name="play_playlist">Play Playlist</string>
    <string name="play_video_list">Play Video List</string>
    <string name="choose_index">Choose Video List index</string>
    <string name="choose_start_time">Choose Start Time (in seconds)</string>
    <string name="autoplay">Autoplay</string>
    <string name="box_mode">Box mode</string>
    <string name="youtube_intents">YouTube App Launcher Intents</string>
    <string name="message">Message</string>
</resources>