<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

  <Button
          android:id="@+id/play_video_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="6dp"
          android:text="@string/play_video"
          style="@style/CustomButton" />

  <Button
          android:id="@+id/start_playlist_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:text="@string/play_playlist"
          style="@style/CustomButton" />

  <Button
          android:id="@+id/start_video_list_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:text="@string/play_video_list"
          style="@style/CustomButton" />

  <EditText
          android:id="@+id/choose_index_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="12dp"
          android:layout_marginTop="24dp"
          android:layout_marginBottom="6dp"
          android:inputType="number"
          android:hint="@string/choose_index"
          android:background="@drawable/rounded_corner_2"
          style="@style/EditText1" />

  <EditText
          android:id="@+id/choose_start_time_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="12dp"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:inputType="number"
          android:hint="@string/choose_start_time"
          android:background="@drawable/rounded_corner_2"
          style="@style/EditText1" />

  <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:background="@drawable/rounded_corner">

    <CheckBox
            android:id="@+id/autoplay_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_centerVertical="true"
            android:text="@string/autoplay"
            android:button="@drawable/checkbox_selector" />

  </RelativeLayout>

  <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:background="@drawable/rounded_corner">

    <CheckBox
            android:id="@+id/box_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_centerVertical="true"
            android:text="@string/box_mode"
            android:button="@drawable/checkbox_selector" />

  </RelativeLayout>

</LinearLayout>
