<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="temp"
                type="it.giovanni.arkivio.model.DarkModeModel" />

        <variable
                name="presenter"
                type="it.giovanni.arkivio.presenter.DarkModePresenter" />
    </data>

    <LinearLayout
            android:id="@+id/player_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="vertical">

        <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:id="@+id/player_view_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/player_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/player_title"
                    android:textColor="@color/dark"
                    android:maxLines="2" />

            <TextView
                    android:id="@+id/player_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/player_video_id"
                    android:textColor="@color/dark" />

            <TextView
                    android:id="@+id/player_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/player_description"
                    android:textColor="@color/dark"
                    android:maxLines="4" />

            <CheckBox
                    android:id="@+id/landscape_full_screen_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/landscape_fullscreen"
                    android:visibility="gone" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/full_screen_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/full_screen_view"
                        android:layout_alignParentBottom="true"
                        android:visibility="gone"
                        style="@style/ButtonNormalDarkMode" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>