<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
        name="temp"
        type="it.giovanni.arkivio.model.DarkModeModel" />

    <variable
        name="presenter"
        type="it.giovanni.arkivio.presenter.DarkModePresenter" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youtube_title"
        android:textSize="21sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/search_title"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_video_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/video_wall"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_video_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/video_list"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_full_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/fullscreen_handling"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/actionbar_overlay"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_player_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/player_controls"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_intent_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/intent_controls"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_youtube_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/youtube_intents"
        android:textSize="16sp"
        android:textColor="@{temp.labelColor}"
        android:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@{temp.labelColor}"
        android:layout_gravity="center"
        android:alpha=".4"
        tools:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/label_youtube_version"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_margin="10dp"
          android:textSize="14sp"
          android:textColor="@{temp.labelColor}"
          android:textAlignment="center"
          android:layout_alignParentBottom="true"
          tools:textColor="@color/colorPrimary" />

    </RelativeLayout>

  </LinearLayout>

</layout>