<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:clickable="true">

    <TextView
            android:id="@+id/label_phone_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/phone_state_title"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textAlignment="center" />

    <View android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/dark"
            android:layout_gravity="center"
            android:alpha=".4" />

    <TextView
            android:id="@+id/label_explores_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/explores_pdf_title"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textAlignment="center" />

    <View android:layout_width="120dp"
          android:layout_height="1dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:background="@color/dark"
          android:layout_gravity="center"
          android:alpha=".4" />

    <TextView
            android:id="@+id/label_download_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/download_pdf_title"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textAlignment="center" />

    <View android:layout_width="120dp"
          android:layout_height="1dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:background="@color/dark"
          android:layout_gravity="center"
          android:alpha=".4" />

</LinearLayout>